added more specific selector .holder a[href^='https'] and removed selector  .list > li:last-child. It was needed to make the list circle green

--- a/Lesson16/HW/task1/css/index.css
+++ b/Lesson16/HW/task1/css/index.css
@@ -28,11 +28,11 @@ blockquote::after {
 
 
 /* Task 2 */
-a[href^='https'] {
+.holder a[href^='https'] {
 	color: red;
 }
 
-.list > li:last-child a, .list > li:last-child {
+.list > li:last-child a {
 	color: green
 }
 
