--- a/Lesson16/HW/task2/css/index.css
+++ b/Lesson16/HW/task2/css/index.css
@@ -16,25 +16,20 @@ body {
   font-family: serif;
   font-size: 31px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 .container .box-1 {
   background-color: #f1dcff;
   flex:3;
   justify-content: space-between;
-  display: flex;
-  flex-direction: row;
 }
 .container .box-2 {  
   flex: 50;
-  display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 .container .box-3 {
   background-color: #ff86d5;
   flex:2;
+  flex-direction: column;
   justify-content: center;
 }
 .content {
@@ -62,23 +57,23 @@ body {
 
 .header-items {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 .header-items .header-item {
   padding-right: 10px;
+  text-decoration: none;
+  color:black;
 }
 .content-items {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;  
   
 }
 .content-items .content-item {
   align-items: center;
-  flex: 0 0 calc(33.3% - 24px);  
+  flex: 1 0 350px;
   border: 2px solid purple;
   border-radius: 20px;
   margin: 10px;
@@ -95,7 +90,6 @@ body {
   border: none;
   color: white;
   text-align: center;
-  font-size: 28px;
   margin-top: auto;
   margin-bottom: 20px;
   border-radius: 20px;
@@ -120,12 +114,12 @@ body {
 .holder {
   min-height: calc(100%/3);
   display: flex;
-  flex-direction: row;
   border: 4px solid black;
   border-radius: 20px 20px 0 0;
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 20px;
+  overflow: hidden;
 }
 .holder .item {
   font-family: serif;
@@ -139,7 +133,6 @@ body {
   background-color: red;
   order: 1;
   width: 50%;
-  border-radius: 16px 0 0 0;
 }
 
 .holder .item:nth-child(2) {
@@ -165,5 +158,4 @@ body {
   background-color: orange;
   order: 2;
   width: 50%;
-  border-radius: 0 16px 0 0;
 }
